# sematic-release-demo

./: .cz-config.js  .env.example  .gitignore  .monday-tasks-temp  .releaserc.json  ACTUALIZACIONES_RECIENTES_FIX.md  BUILD_STATUS.md  CHANGELOG.md  Cargo.toml  GEMINI_ANALYSIS_MODAL_ENHANCEMENT.md  GITHUB_SETUP.md  OPENSSL_SOLUTIONS.md  README.md  README_TUI.md  ROADMAP.md  SECURITY_BREAKING_CHANGES_ENHANCEMENT.md  SEMANTIC_RELEASE_SUMMARY.md  STATE_MANAGEMENT.md  VERSION_TEST.md  package-lock.json  package.json  test_autocommit.rs  test_demo.txt  test_removal.rs
.github/workflows/: release.yml
logo/: ascii.txt
release-notes/: release-notes-2025-04-13.md  release-notes-2025-04-13_GEMINI.md  release-notes-2025-04-14.md  release-notes-2025-04-14_GEMINI.md  release-notes-2025-04-15.md  release-notes-2025-04-15_GEMINI.md  release-notes-2025-04-16.md  release-notes-2025-04-16_GEMINI.md
scripts/: commit-with-monday.js  config-monday.js  monday-commit.js  monday-task-selector.js  plantilla.md  prepare-release-notes.js  search-task.js  setup-commit-template.sh
src/: app.rs  config.rs  error.rs  gemini.rs  git.rs  lib.rs  main.rs  monday.rs  observability.rs  test_file.rs  types.rs  ui.rs  utils.rs
src/app/: app.rs  background_operations.rs  cli_operations.rs  commit_operations.rs  event_handlers.rs  input_handlers.rs  mod.rs  release_notes.rs  semantic_release_operations.rs  task_operations.rs
src/application/: mod.rs
src/application/commands/: create_release.rs  generate_notes.rs  mod.rs  sync_tasks.rs
src/application/queries/: get_git_history.rs  get_release_status.rs  list_tasks.rs  mod.rs
src/application/services/: ai_coordinator.rs  mod.rs  release_orchestrator.rs  task_manager.rs
src/domains/: mod.rs
src/domains/ai/: entities.rs  errors.rs  mod.rs  repository.rs  services.rs  value_objects.rs
src/domains/git/: entities.rs  errors.rs  mod.rs  repository.rs  services.rs  value_objects.rs
src/domains/releases/: mod.rs
src/domains/semantic/: entities.rs  errors.rs  mod.rs  repository.rs  services.rs  value_objects.rs
src/domains/tasks/: entities.rs  errors.rs  mod.rs  repository.rs  services.rs  value_objects.rs
src/git/: mod.rs  repository.rs
src/infrastructure/: mod.rs
src/infrastructure/events/: event_bus.rs  handlers.rs  mod.rs
src/infrastructure/storage/: cache.rs  database.rs  file_system.rs  git_storage.rs  memory.rs  mod.rs
src/presentation/: container.rs  mod.rs
src/presentation/cli/: command_handlers.rs  mod.rs  output_formatters.rs
src/presentation/components/: mod.rs
src/presentation/components/core/: base.rs  keyboard.rs  lifecycle.rs  mod.rs
src/presentation/components/dialogs/: confirmation.rs  confirmation.rs.disabled  mod.rs  modal.rs  modal.rs.disabled
src/presentation/components/forms/: README.md  button.rs  checkbox.rs  form_builder.rs  mod.rs  radio.rs  select.rs  text_input.rs  text_input_demo.rs
src/presentation/components/layout/: mod.rs  sidebar.rs  split_pane.rs  (+2 more)
src/presentation/rendering/: effects.rs  mod.rs  performance.rs  smart_renderer.rs
src/presentation/theme/: animations.rs  colors.rs  demo.rs  layout.rs  mod.rs  styles.rs  theme_manager.rs
src/presentation/tui/: app.rs  handlers.rs  mod.rs  state.rs
src/services/: gemini.rs  jira.rs  mod.rs  monday.rs
src/state/: events.rs  manager.rs  mod.rs  reactive.rs  stores.rs
src/ui/: components.rs  cursor.rs  loading.rs  mod.rs  scrollable_text.rs  state.rs
src/ui/screens/: commit.rs  config.rs  main.rs  mod.rs  release_notes.rs  semantic_release.rs  tasks.rs
~/: .gitmessage
(+5 files in other folders)
