[package]
name = "semantic-release-tui"
version = "0.1.0"
edition = "2021"

[lib]
name = "semantic_release_tui"
path = "src/lib.rs"

[[bin]]
name = "semantic-release-tui"
path = "src/main.rs"

[features]
default = []
vendored-openssl = ["openssl/vendored"]
new-domains = []  # Feature flag for Domain-Driven Design architecture
new-components = ["dep:tuirealm", "dep:tui-tree-widget", "dep:tui-popup", "dep:ratatui-image", "dep:throbber-widgets-tui"]  # Feature flag for Component-Based UI Architecture

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
genai = "0.3.0"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5.0"
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.5"
dialoguer = "0.11"
git2 = "0.19"
toml = "0.8"
dotenv = "0.15"
jira_query = "1.6.0"
openssl = "0.10" 
tui-textarea = { version = "0.7.0", features = ["crossterm"] } 

# Modern Error Handling & Observability
miette = { version = "7.0", features = ["fancy"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-tree = "0.3"
tracing-appender = "0.2"
tokio-util = "0.7"
async-broadcast = "0.7"
pin-project = "1.0"
async-trait = "0.1"

# Phase 2.1: Domain-Driven Design Dependencies
url = { version = "2.5", features = ["serde"] }  # For URL value objects
handlebars = "5.1"  # For template engine
futures = "0.3"  # For async operations

# Phase 2.2: State Management Revolution
derive_more = "0.99"
typed-builder = "0.18"
serde_with = "3.0"

# Phase 2.3: Component-Based UI Architecture
tuirealm = { version = "3.0", optional = true, features = ["crossterm"] }
tui-tree-widget = { version = "0.22", optional = true }
tui-popup = { version = "0.4", optional = true }
ratatui-image = { version = "2.0", optional = true }
throbber-widgets-tui = { version = "0.7", optional = true }

# Keep anyhow temporarily for gradual migration
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.0" 